first POC for redirecting with generated jwt

--- a/my-httpd.conf
+++ b/my-httpd.conf
@@ -139,10 +139,10 @@ LoadModule headers_module modules/mod_headers.so
 LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule version_module modules/mod_version.so
 #LoadModule remoteip_module modules/mod_remoteip.so
-#LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_module modules/mod_proxy.so
 #LoadModule proxy_connect_module modules/mod_proxy_connect.so
 #LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
-#LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
 #LoadModule proxy_uwsgi_module modules/mod_proxy_uwsgi.so
@@ -196,7 +196,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule unixd_module>
 #
@@ -290,6 +290,24 @@ DocumentRoot "/usr/local/apache2/htdocs"
     #
     Require all granted
 </Directory>
+
+RewriteEngine On
+
+RewriteCond "%{HTTPS}" =off
+RewriteRule "." "-" [E=protocol:http]
+RewriteCond "%{HTTPS}" =on
+RewriteRule "." "-" [E=protocol:https]
+
+# pass main page and assets directly to jitsi
+RewriteRule "^/$" "%{ENV:protocol}://web/" [P]
+RewriteRule "^/(libs/.*|css/.*|http-bind.*)" "%{ENV:protocol}://web/$1" [P]
+
+# enter a meeting room only if ?jwt=... is applied
+RewriteCond "%{QUERY_STRING}" ^jwt=
+RewriteRule "^/(.*)" "%{ENV:protocol}://web/$1" [P]
+
+# all other requests pass to create-jwt to append the ?jwt=...
+RewriteRule "^/(?!cgi-bin/).+" "/cgi-bin/create-jwt" [P]
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
