--- a/Dockerfile-preauth
+++ b/Dockerfile-preauth
@@ -1,5 +1,12 @@
 FROM httpd:latest
-COPY ./public-html/ /usr/local/apache2/htdocs/
+
+RUN apt-get update; \
+    apt-get install -y libjson-webtoken-perl; \
+    rm -rf /var/lib/apt/lists/*
+
 COPY ./my-printenv /usr/local/apache2/cgi-bin/printenv
+COPY ./my-create-jwt /usr/local/apache2/cgi-bin/create-jwt
 COPY ./my-httpd.conf /usr/local/apache2/conf/httpd.conf
-RUN chmod 755 /usr/local/apache2/cgi-bin/printenv
+
+RUN chmod 755 /usr/local/apache2/cgi-bin/printenv \
+              /usr/local/apache2/cgi-bin/create-jwt
