--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,18 @@ version: '3'
 services:
 
     preauth:
-        image: httpd
         build:
             context: .
             dockerfile: Dockerfile-preauth
+        image: preauth_httpd
         restart: ${RESTART_POLICY}
         ports:
             #- '${HTTP_PORT}:80'
             #- '${HTTPS_PORT}:443'
             - '80:80'
             - '443:443'
+        networks:
+            meet.jitsi:
 
 
     # Frontend
