pass roomname to redirector script create-jwt

--- a/my-httpd.conf
+++ b/my-httpd.conf
@@ -300,14 +300,14 @@ RewriteRule "." "-" [E=protocol:https]
 
 # pass main page and assets directly to jitsi
 RewriteRule "^/$" "%{ENV:protocol}://web/" [P]
-RewriteRule "^/(libs/.*|css/.*|http-bind.*)" "%{ENV:protocol}://web/$1" [P]
+RewriteRule "^/(libs/.*|css/.*|http-bind.*|favicon\.ico|images/.*)$" "%{ENV:protocol}://web/$1" [P]
 
 # enter a meeting room only if ?jwt=... is applied
 RewriteCond "%{QUERY_STRING}" ^jwt=
 RewriteRule "^/(.*)" "%{ENV:protocol}://web/$1" [P]
 
 # all other requests pass to create-jwt to append the ?jwt=...
-RewriteRule "^/(?!cgi-bin/).+" "/cgi-bin/create-jwt" [P]
+RewriteRule "^/(?!cgi-bin/)(.+)" "/cgi-bin/create-jwt?roomname=$1" [P]
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
