--- a/my-httpd.conf
+++ b/my-httpd.conf
@@ -264,31 +264,9 @@ ServerAdmin you@example.com
 #
 DocumentRoot "/usr/local/apache2/htdocs"
 <Directory "/usr/local/apache2/htdocs">
-    #
-    # Possible values for the Options directive are "None", "All",
-    # or any combination of:
-    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
-    #
-    # Note that "MultiViews" must be named *explicitly* --- "Options All"
-    # doesn't give it to you.
-    #
-    # The Options directive is both complicated and important.  Please see
-    # http://httpd.apache.org/docs/2.4/mod/core.html#options
-    # for more information.
-    #
-    Options Indexes FollowSymLinks
-
-    #
-    # AllowOverride controls what directives may be placed in .htaccess files.
-    # It can be "All", "None", or any combination of the keywords:
-    #   AllowOverride FileInfo AuthConfig Limit
-    #
     AllowOverride None
-
-    #
-    # Controls who can get stuff from this server.
-    #
-    Require all granted
+    Options None
+    Require all denied
 </Directory>
 
 RewriteEngine On
@@ -416,7 +394,11 @@ LogLevel warn
 <Directory "/usr/local/apache2/cgi-bin">
     AllowOverride None
     Options None
-    Require all granted
+    AuthType Basic
+    AuthName "Please Sign In to Use Jitsi"
+    AuthBasicProvider file
+    AuthUserFile "/usr/local/apache2/htdocs/htpasswd"
+    Require valid-user
 </Directory>
 
 <IfModule headers_module>
