added some more assets to RewriteRule

--- a/my-httpd.conf
+++ b/my-httpd.conf
@@ -278,7 +278,7 @@ RewriteRule "." "-" [E=protocol:https]
 
 # pass main page and assets directly to jitsi
 RewriteRule "^/$" "%{ENV:protocol}://web/" [P]
-RewriteRule "^/(libs/.*|css/.*|http-bind.*|favicon\.ico|images/.*)$" "%{ENV:protocol}://web/$1" [P]
+RewriteRule "^/((libs|sounds|lang|css|images)/.*|http-bind.*)$" "%{ENV:protocol}://web/$1" [P]
 
 # enter a meeting room only if ?jwt=... is applied
 RewriteCond "%{QUERY_STRING}" ^jwt=
