--- a/env.example
+++ b/env.example
@@ -100,22 +100,22 @@ TZ=UTC
 #
 
 # Enable authentication
-#ENABLE_AUTH=1
+ENABLE_AUTH=1
 
 # Enable guest access
-#ENABLE_GUESTS=1
+ENABLE_GUESTS=0
 
 # Select authentication type: internal, jwt or ldap
-#AUTH_TYPE=internal
+AUTH_TYPE=jwt
 
 # JWT authentication
 #
 
 # Application identifier
-#JWT_APP_ID=my_jitsi_app_id
+JWT_APP_ID=my_jitsi_app_id
 
 # Application secret known only to your token
-#JWT_APP_SECRET=my_jitsi_app_secret
+JWT_APP_SECRET=my_jitsi_app_secret
 
 # (Optional) Set asap_accepted_issuers as a comma separated list
 #JWT_ACCEPTED_ISSUERS=my_web_client,my_app_client
